2010-04-30  Petasis George  <petasis@iit.demokritos.gr>
        * /macosx/macdnd.m: Several changes:
        Moved drag operation inside TkDND_DoDragDropObjCmd. This means that
          drag operation can be started with a Tk binding.
        Fixed the way drag types are declared in the drag clipboard. Now types
          are reported correctly during drops.
        Added a tag in the DNDView class.
        Added a function to get the DNDView pointer from an NSView pointer.
          Hopefully this will not permit to add more than one DNDView to any
          view. This function always return a DNDView pointer (it creates a
          new DNDView if a view does not already has one).

        The demos seem to work, although the garbage collector seems to print
        some messages during drags from Tk windows.

2010-04-06  Petasis George  <petasis@iit.demokritos.gr>
        * /macosx/macdnd.m: Some attempts towards drag support for OS X.

2010-01-03  Petasis George  <petasis@iit.demokritos.gr>
        * /library/tkdnd_macosx.tcl:
        * /macosx/macdnd.m: Changed the way dropped data is handled: during
        the drop event the data are converted into a utf-8 string (in case of
        dropping string data) or a Tcl list object of utf-8 filenames (in case
        of dropping files). The data object is stored directly in the 
        tkdnd::macdnd::_dropped_data variable, instead of the selection
        clipboard. _GetDroppedData was modified to return this stored data.

2009-12-30  Petasis George  <petasis@iit.demokritos.gr>
        * /cmake:
        * /CMakeLists.txt: Added support for building TkDND with cmake (i.e.
        under windows).

2009-12-29  Petasis George  <petasis@iit.demokritos.gr>
        * /library/tkdnd_macosx.tcl:
        * /macosx/macdnd.m: Changes to better integrate the work done by
        Kevin Walzer with the rest of TkDND, since OS X seems to mimic the
        XDND implementation. tkdnd_macosx.tcl is now a stub file, with most of